@@ -36,7 +36,7 @@ env:
     - PLATFORMIO_CI_SRC=examples/Log
     - PLATFORMIO_CI_SRC=examples/SimpleIO
     - PLATFORMIO_CI_SRC=examples/Skeleton
-    - PLATFORMIO_CI_SRC=examples/Temperature
+#    - PLATFORMIO_CI_SRC=examples/Temperature
 install:
     - pip install -U platformio
     - platformio lib -g install "Adafruit NeoPixel@~1.1.6"
@@ -44,7 +44,7 @@ install:
     - platformio lib -g install "Timezone@~1.1.1"
     - platformio lib -g install "ArduinoJson@~5.13.0"
     - platformio lib -g install "ArduinoJWT@~1.0.1"
-    - platformio lib -g install "DHT sensor library"
-    - platformio lib -g install "Adafruit Unified Sensor"
+#    - platformio lib -g install "DHT sensor library"
+#    - platformio lib -g install "Adafruit Unified Sensor"
 script:
     - platformio ci --lib="." --board=nodemcuv2
