@@ -1,3 +1,3 @@
-#define IOTSA_VERSION "1.7"
+#define IOTSA_VERSION "1.7.1"
 #define IOTSA_COMMIT ""
-#define IOTSA_FULL_VERSION ("1.7")
+#define IOTSA_FULL_VERSION ("1.7.1")
